--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,4 @@
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+@import url("https://fonts.googleapis.com/css2?family=Dosis&display=swap"); /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
 /**
@@ -309,17 +309,25 @@ template {
 }
 
 h1 {
-  color: green;
+  color: #575757;
+  font-family: "Dosis";
+  font-size: 36px;
+  color: #2d3e50;
+}
+
+h3 {
+  color: #DB8D33;
 }
 
 .button {
-  color: rgb(184, 96, 96);
-  background-color: blue;
+  background-color: rgb(143, 143, 189);
+  color: white;
+  padding: 10px 20px;
+  border: none;
   border-radius: 5px;
-  margin: 2px;
-  padding: 1em;
-  font-size: 1em;
-  border-style: none;
+  text-transform: uppercase;
+  font-weight: bold;
+  cursor: pointer;
 }
 
 nav ul {
@@ -334,5 +342,13 @@ nav a {
   display: block;
   padding: 5px 10px;
   text-decoration: none;
-  color: orange;
+  color: #575757;
+}
+
+.nav-links {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: flex-end;
 }/*# sourceMappingURL=main.css.map */
