--- a/styles/partials/_colors.scss
+++ b/styles/partials/_colors.scss
@@ -1,2 +1,4 @@
-$primaryColor: green;
-$fontColor: orange;
+// _colors.scss
+$primaryColor: #3e72aa;
+$primary-font-color: #575757;
+$secondary-font-color: #DB8D33;
