--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -1,9 +1,18 @@
-@mixin button ($primaryColor) {
-    color: rgb(184, 96, 96);
-    background-color: $primaryColor;
+// _mixins.scss
+@mixin button($color) {
+    background-color: $color;
+    color: white;
+    padding: 10px 20px;
+    border: none;
     border-radius: 5px;
-    margin: 2px;
-    padding: 1em;
-    font-size: 1em;
-    border-style: none;
-}
+    text-transform: uppercase;
+    font-weight: bold;
+    cursor: pointer;
+  }
+
+  @mixin heading($size, $color, $primary-font) {
+    font-family: $primary-font;
+    font-size: $size;
+    color: $color;
+    
+  }
