--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Dosis&display=swap"); /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+@import url("https://fonts.googleapis.com/css2?family=Dosis&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Marck+Script&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap");
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
 /**
@@ -313,10 +316,20 @@ h1 {
   font-family: "Dosis";
   font-size: 36px;
   color: #2d3e50;
+  padding: 10px 20px;
+}
+
+h2 {
+  font-family: "Montserrat";
+  font-size: 36px;
+  color: #2d3e50;
+  padding: 10px 20px;
 }
 
 h3 {
   color: #DB8D33;
+  font-family: "Marck Script", san-serif;
+  padding: 5px 10px;
 }
 
 .button {
