--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -1,3 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Dosis&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Marck+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+
 
 $primary-font:'Dosis', san-serif;
+$heading:'Marck Script', san-serif;
+$title:'Montserrat', san-serif;
