--- a/styles/partials/_colors.scss
+++ b/styles/partials/_colors.scss
@@ -2,3 +2,6 @@
 $primaryColor: #3e72aa;
 $primary-font-color: #575757;
 $secondary-font-color: #DB8D33;
+
+$dark-background: #414141;
+$darker-background: #150300;
