--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -1,5 +1,5 @@
 // _mixins.scss
-@mixin button($color) {
+@mixin links($color) {
     background-color: $color;
     color: white;
     padding: 10px 20px;
@@ -13,7 +13,7 @@
   @mixin heading($size, $color, $heading) {
     font-family: $heading;
     font-size: $size;
-    color: $color;
+    color: white;
     padding: 10px;
   }
 
@@ -21,7 +21,7 @@
     font-family: $title;
     font-size: $size;
     color: $color;
-    padding: 0px 18px;  
+    padding: 0px 134px;  
   }
 
  @mixin paragraph($size, $color, $primary-font){
